config a comment system

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,4 +1,4 @@
-<div id="gitmentContainer"></div>
+<div id="container"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
@@ -11,5 +11,5 @@ var gitment = new Gitment({
         client_secret: 'a85a92835f8831731511a47e40dcc3855574d176',
     },
 });
-gitment.render('gitmentContainer');
+gitment.render('container');
 </script>
