--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -3,7 +3,7 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-    id: '16851692',
+    id: 'window.location.href',
     owner: 'TeslaHua',
     repo: 'TeslaHua.github.io',
     oauth: {
