--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -4,7 +4,7 @@
 <script>
 var gitment = new Gitment({
     owner: 'TeslaHua',
-    repo: 'github.com/TeslaHua/TeslaHua.github.io',
+    repo: 'TeslaHua.github.io',
     oauth: {
         client_id: '0f1b792c389050e22d2e',
         client_secret: 'a85a92835f8831731511a47e40dcc3855574d176',
