--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,6 +1,6 @@
 <div id="container"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<link rel="stylesheet" href="https://github.com/TeslaHua/TeslaHua.github.io/blob/master/css/default.css">
+<script src="https://github.com/TeslaHua/TeslaHua.github.io/blob/master/js/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
     owner: 'TeslaHua',
