--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: default
 ---
 <!-- Navi -->
@@ -8,7 +8,7 @@ layout: default
 <!-- Title -->
 <h2>{{ page.title }}</h2>
 {% if page.tags.size > 0%}<b>标签：</b>{% for tag in page.tags %}{% if tag != "" %}
-<a href="/tags.html#{{ tag }}"><i>{{ tag }}</i></a>
+<a href="/posts/tags.html#{{ tag }}"><i>{{ tag }}</i></a>
 {% if forloop.index != page.tags.size %}, {% endif %}{% endif %}{% endfor %}{% endif %}
 <div class="post-date">
 	<span class="glyphicon glyphicon-time"></span>
