--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,7 +25,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
   </head>
-
+  
   <body>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -49,7 +49,7 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          {% include navigation.html %}
+          {% include navigation.html %} 
         </div>
         <!-- /.navbar-collapse -->
       </div>
@@ -70,7 +70,7 @@
               栏目分类
             </h4>
             <div class="row">
-              {% include categories.html %}
+              {% include categories.html %} 
             </div>
             <!-- /.row -->
           </div>
@@ -79,20 +79,26 @@
             <h4>
               最新文章
             </h4>
-      			<div class="row">
-                    {% include recent_posts.html %}
-      			</div>
+			<div class="row">
+              {% include recent_posts.html %} 
+			</div>
+          </div>		  
+		  <!-- Blog Links Well -->
+          <div class="well">
+            <h4>
+              友情链接
+            </h4>
+            {% include friend_links.html %} 
           </div>
         </div>
       </div>
-		  <!-- Blog Links Well -->
-      <!--在这里可以添加友情链接-->
+      <!-- /.row -->
 
       <!-- Footer -->
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            {% include copyright.html %}
+            {% include copyright.html %} 
           </div>
           <!-- /.col-lg-12 -->
         </div>
