--- a/_includes/friend_links.html
+++ b/_includes/friend_links.html
@@ -1,17 +1,17 @@
             <ul class="list-unstyled">
               <li>
-                <a href="http://www.panxw.com"><!-- 请保留友情链接，please remain as friend link-->
+                <a href="http://blog.csdn.net/wang975380547" target="_blank">
+                  王中华博客
+                </a>
+              </li>
+              <li>
+                <a href="http://www.panxw.com" target="_blank"><!-- 请保留友情链接，please remain as friend link-->
                   潘学文博客
                 </a>
               </li>
               <li>
                 <a href="http://www.ruanyifeng.com/blog/" target="_blank">
-                  阮一峰的博客
-                </a>
-              </li>
-              <li>
-                <a href="/links.html">
-                  交换友情链接
+                  阮一峰博客
                 </a>
               </li>
             </ul>
