--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -41,8 +41,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/posts/hardware.html">
-                      硬件设计相关
+                    <a href="/posts/slam.html">
+                      SLAM相关
                     </a>
                   </li>
                   <li>
