config my blog.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,7 @@
         <!-- /.row -->
       </footer>
     </div>
+    {% include leancloud-analytics.html %}
     <!-- /.container -->
   </body>
 
