--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,23 @@
 ---
 layout: default
 ---
+
 <!-- Navi -->
 {% for cat in site.all_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;>&nbsp;<a href="{{cat[2]}}">{{cat[1]}}</a>&nbsp;>&nbsp;正文{% endif %}{% endfor %}
 <!-- Title -->
 <h2>{{ page.title }}</h2>
 {% if page.tags.size > 0%}<b>标签：</b>{% for tag in page.tags %}{% if tag != "" %}<a href="/posts/tags.html#{{ tag }}"><i>{{ tag }}</i></a>{% if forloop.index != page.tags.size %}, {% endif %}{% endif %}{% endfor %}{% endif %}
+
 <div class="post-date">
 	<span class="glyphicon glyphicon-time"></span>
 	{{ page.date | date:"%Y-%m-%d" }}
+	{% if site.leancloud.enable %}
+	<span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
+		<span class="post-meta-divider">|</span>
+		<span class="post-meta-item-text">浏览量:</span>
+		<span class="leancloud-visitors-count"></span>
+	</span>
+	{% endif %}
 </div>
 <br/>
 
