--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,8 @@
         </div>
         <!-- Blog Sidebar Widgets Column -->
         <div class="col-md-4">
-          <!-- Blog Categories Well -->
+
+      <!-- Blog Categories Well -->
           <div class="well">
             <h4>
               栏目分类
@@ -74,17 +75,27 @@
             <div class="row">
               {% include categories.html %}
             </div>
-            <!-- /.row -->
           </div>
+
 		  <!-- Blog Recent Well -->
           <div class="well">
             <h4>
               最新文章
             </h4>
-			<div class="row">
+			      <div class="row">
               {% include recent_posts.html %}
-			</div>
+			      </div>
           </div>
+      <!-- Share this blog -->
+          <div class="well">
+            <h4>
+              分享到 :
+            </h4>
+            <div class="row">
+              {% include jiathis.html %}
+            </div>
+          </div>
+
         </div>
       </div>
       <!-- /.row -->
